--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/2C-U2-TPO1-GRUPO1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\Genaro\\Downloads\\TUDS\\Laboratorio 1\\Anexos\\Software\\Soft net beans\\Librerias\\jcalendar-1.4.jar
+file.reference.mariadb-java-client-2.3.0.jar=C:\\Users\\Genaro\\Downloads\\TUDS\\Laboratorio 1\\Anexos\\Software\\Soft net beans\\Librerias\\mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mariadb-java-client-2.3.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
