--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,7 @@ dist.jar=${dist.dir}/ULP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=D:\\Desarrollador de Software\\Laboratorio 1\\Grupo1-DemoTransversal\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Ezequiel\\Documents\\NetBeansProjects\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-2.3.0.jar=../../../../Luis/Desktop/HoyLab1/Adicional/Adicional/mariadb-java-client-2.3.0.jar
 includes=**
 jar.compress=false
