--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,6 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-2.3.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.gt-swing-23.3.jar}:\
     ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -62,6 +61,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -70,6 +70,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=ULP
 main.class=ulp.Universidad
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
